tests/parsing/smtlib/poly/errors/005_attribute_name_2.expected
File "tests/parsing/smtlib/poly/errors/005_attribute_name_2.psmt2", line 2, character 23-26:
2 | (assert (! foo :bar 42 foo))
                           ^^^
Error while parsing an attribute list, read the symbol 'foo',
      but expected either a closing parenthesis, or another attribute of the
      form "keyword value".
